Finished team activity 3

--- a/src/index.html
+++ b/src/index.html
@@ -113,4 +113,5 @@
     </main>
     <footer>&copy;NOT a real business</footer>
   </body>
+  <script type="module" src="js/main.js"></script>
 </html>
