--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
   </head>
+
   <body>
     <header class="divider">
       <div class="logo">
@@ -14,7 +15,11 @@
       </div>
       <div class="cart">
         <a href="cart/index.html">
-          <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 100 100">
+          <svg
+            id="cart-icon"
+            xmlns="http://www.w3.org/2000/svg"
+            viewBox="0 0 100 100"
+          >
             <path
               d="M18.9 32.6c1.1 2.4 2.5 3.3 5.4 3.3 1.6 0 3.6-0.3 5.9-0.6 3.2-0.5 6.9-1 11.2-1 2.1 0 4.3 0.1 6.4 0.3 2.1 0.1 4.2 0.3 6.1 0.3 3.2 0 5.2-0.4 5.9-1.2 2.7-2.7 2.8-8.8 2.9-14.6 0.1-6.7 0.2-14.5 4.6-18.7 -0.5 0-1 0-1.6 0 -14.2 0-37.5 0-41.1 0C15.6 6.2 14.9 23.6 18.9 32.6z"
             />
@@ -72,8 +77,8 @@
               />
               <h3 class="card__brand">Marmot</h3>
               <h2 class="card__name">Ajax Tent - 3-Person, 3-Season</h2>
-              <p class="product-card__price">$199.99</p></a
-            >
+              <p class="product-card__price">$199.99</p>
+            </a>
           </li>
           <li class="product-card">
             <a href="product_pages/index.html?product=985RF">
@@ -83,8 +88,8 @@
               />
               <h3 class="card__brand">The North Face</h3>
               <h2 class="card__name">Talus Tent - 4-Person, 3-Season</h2>
-              <p class="product-card__price">$199.99</p></a
-            >
+              <p class="product-card__price">$199.99</p>
+            </a>
           </li>
           <li class="product-card">
             <a href="product_pages/index.html?product=985PR">
@@ -94,8 +99,8 @@
               />
               <h3 class="card__brand">The North Face</h3>
               <h2 class="card__name">Alpine Guide Tent - 3-Person, 4-Season</h2>
-              <p class="product-card__price">$349.99</p></a
-            >
+              <p class="product-card__price">$349.99</p>
+            </a>
           </li>
           <li class="product-card">
             <a href="product_pages/index.html?product=344YJ">
@@ -105,12 +110,13 @@
               />
               <h3 class="card__brand">Cedar Ridge</h3>
               <h2 class="card__name">Rimrock Tent - 2-Person, 3-Season</h2>
-              <p class="product-card__price">$69.99</p></a
-            >
+              <p class="product-card__price">$69.99</p>
+            </a>
           </li>
         </ul>
       </section>
     </main>
     <footer>&copy;NOT a real business</footer>
   </body>
+  <script type="module" src="js/main.js"></script>
 </html>
