--- a/src/index.html
+++ b/src/index.html
@@ -29,6 +29,38 @@
           comfortably at an affordable price.
         </p>
       </section>
+
+      <!-- New Product Categories Section -->
+      <section class="product-categories">
+        <h2>Explore Our Categories</h2>
+        <div class="grid">
+          <div class="grid-item">
+            <a href="product-list/index.html?category=tents">
+              <img src="https://byui-cit.github.io/wdd330/images/category-icons/noun_Tent_3544767.svg" alt="Tent Icon from Noun Project: Mustofa Bayu" />
+              <h3>Tents</h3>
+            </a>
+          </div>
+          <div class="grid-item">
+            <a href="product-list/index.html?category=backpacks">
+              <img src="https://byui-cit.github.io/wdd330/images/category-icons/noun_carrier%20bag_3544771.svg" alt="Backpack Icon from Noun Project: Mustofa Bayu" />
+              <h3>Backpacks</h3>
+            </a>
+          </div>
+          <div class="grid-item">
+            <a href="product-list/index.html?category=sleeping-bags">
+              <img src="https://byui-cit.github.io/wdd330/images/category-icons/noun_Sleeping%20Bag_3544775.svg" alt="Sleeping Bag Icon from Noun Project: Mustofa Bayu" />
+              <h3>Sleeping Bags</h3>
+            </a>
+          </div>
+          <div class="grid-item">
+            <a href="product-list/index.html?category=hammocks">
+              <img src="https://byui-cit.github.io/wdd330/images/category-icons/noun_Hammock_791143.svg" alt="Hammock Icon from Noun Project: Paul Richard" />
+              <h3>Hammocks</h3>
+            </a>
+          </div>
+        </div>
+      </section>
+
       <section class="products">
         <h2>Top Products</h2>
         <ul class="product-list">
@@ -40,8 +72,8 @@
               />
               <h3 class="card__brand">Marmot</h3>
               <h2 class="card__name">Ajax Tent - 3-Person, 3-Season</h2>
-              <p class="product-card__price">$199.99</p></a
-            >
+              <p class="product-card__price">$199.99</p>
+            </a>
           </li>
           <li class="product-card">
             <a href="product_pages/index.html?product=985RF">
@@ -51,8 +83,8 @@
               />
               <h3 class="card__brand">The North Face</h3>
               <h2 class="card__name">Talus Tent - 4-Person, 3-Season</h2>
-              <p class="product-card__price">$199.99</p></a
-            >
+              <p class="product-card__price">$199.99</p>
+            </a>
           </li>
           <li class="product-card">
             <a href="product_pages/index.html?product=985PR">
@@ -62,8 +94,8 @@
               />
               <h3 class="card__brand">The North Face</h3>
               <h2 class="card__name">Alpine Guide Tent - 3-Person, 4-Season</h2>
-              <p class="product-card__price">$349.99</p></a
-            >
+              <p class="product-card__price">$349.99</p>
+            </a>
           </li>
           <li class="product-card">
             <a href="product_pages/index.html?product=344YJ">
@@ -73,8 +105,8 @@
               />
               <h3 class="card__brand">Cedar Ridge</h3>
               <h2 class="card__name">Rimrock Tent - 2-Person, 3-Season</h2>
-              <p class="product-card__price">$69.99</p></a
-            >
+              <p class="product-card__price">$69.99</p>
+            </a>
           </li>
         </ul>
       </section>
