--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -23,10 +23,13 @@
         <img id="productImage" class="divider" src="" alt="" />
         <p class="product-card__suggested-price" id="productSuggestedPrice"></p>
         <p class="product-card__price" id="productFinalPrice"></p>
+        <p class="product-card__discount" id="productDiscount"></p>
         <p class="product__color" id="productColorName"></p>
         <p class="product__description" id="productDescriptionHtmlSimple"></p>
         <div class="product-detail__add">
           <button id="addToCart" data-id="">Add to Cart</button>
+        </div>
+        
         </div>
       </section>
     </main>
