--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -1,27 +1,79 @@
 <!DOCTYPE html>
-
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-
     <title>Sleep Outside | Checkout</title>
-
-    <link rel="stylesheet" href="css/style.css" />
-
+    <link rel="stylesheet" href="/css/style.css" />
     <script src="../js/checkout.js" type="module"></script>
   </head>
-
-  <body>
+  <body id="checkout-body">
     <header class="divider" id="checkout-header"></header>
-
     <main class="divider">
       <section class="products">
         <h2>Review & Place your Order</h2>
+        <!-- Checkout form -->
+        <form id="checkout-form">
+          <fieldset>
+            <legend>Shipping</legend>
+            <label for="fname">First Name</label>
+            <input type="text" id="fname" name="fname" required />
+
+            <label for="lname">Last Name</label>
+            <input type="text" id="lname" name="lname" required />
+
+            <label for="street">Street</label>
+            <input type="text" id="street" name="street" required />
+
+            <label for="city">City</label>
+            <input type="text" id="city" name="city" required />
+
+            <label for="state">State</label>
+            <input type="text" id="state" name="state" required />
+
+            <label for="zip">ZIP Code</label>
+            <input type="text" id="zip" name="zip" required />
+          </fieldset>
+
+          <fieldset>
+            <legend>Payment</legend>
+            <label for="cardNumber">Card number</label>
+            <input type="text" id="cardNumber" name="cardNumber" required />
+
+            <label for="expiration">Expiration</label>
+            <input type="text" id="expiration" name="expiration" required />
+
+            <label for="code">Security Code</label>
+            <input type="text" id="code" name="code" required />
+          </fieldset>
+
+          <fieldset id="order-summary">
+            <legend>Order Summary</legend>
+            <div id="items-summary">
+              <!-- Example items; these should be generated dynamically -->
+              <div class="summary-detail">
+                <span class="summary-label">Item Subtotal(2)</span>
+                <span class="summary-value">$269.98</span>
+              </div>
+            </div>
+            <div class="summary-detail">
+              <span class="summary-label">Shipping Estimate</span>
+              <span class="summary-value">$12.00</span>
+            </div>
+            <div class="summary-detail">
+              <span class="summary-label">Tax</span>
+              <span class="summary-value">$16.20</span>
+            </div>
+            <div class="summary-detail">
+              <span class="summary-label">Order Total</span>
+              <span class="summary-value">$298.18</span>
+            </div>
+          </fieldset>
+
+          <button type="submit">Checkout</button>
+        </form>
       </section>
     </main>
-
     <footer id="checkout-footer"></footer>
   </body>
 </html>
