--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -20,12 +20,11 @@
       <section class="products">
         <h2>My Cart</h2>
         <div class="cart-footer hide divider"></div>
-        <ul class="product-list">
-        </ul>
+        <ul class="product-list"></ul>
       </section>
       <section class="checkout">
         <a href="../checkout/index.html" class="button-link">
-        <button class="checkout-button" >Checkout</button>
+          <button class="checkout-button">Checkout</button>
         </a>
       </section>
     </main>
