added a way to sort by brand and price of products

--- a/src/product-list/index.html
+++ b/src/product-list/index.html
@@ -10,9 +10,16 @@
 
   <body>
     <header class="divider" id="main-header"></header>
+    
+
     <main class="divider">
       <section class="products">
-        <h2>Top Products: <span class="title"></span></h2>
+        <div class="productHeader"><h2>Top Products: <span class="title"></span></h2>
+        <div>
+          <a href="#" id="sortByName">Sort By Brand</a>&nbsp;
+          <a href="#" id="sortByPrice">Sort By Price</a>
+        </div>
+        </div>
         <ul class="product-list"></ul>
       </section>
     </main>
