--- a/src/checkout/index.html
+++ b/src/checkout/index.html
@@ -71,7 +71,7 @@
             </ul>
           </fieldset>
 
-          <button type="submit">Checkout</button>
+          <button id="checkoutSubmit" type="submit">Checkout</button>
         </form>
       </section>
     </main>
