--- a/src/index.html
+++ b/src/index.html
@@ -40,6 +40,7 @@
         </a>
       </div>
     </header>
+    <div id="breadcrumb" class="breadcrumb"></div>
     <main class="divider">
       <div class="hero">
         <img
@@ -111,6 +112,24 @@
         </ul>
       </section>
     </main>
+    <script defer src="/js/breadcrumb.js"></script>
+    <script src="alertModuel.js"></script>
+    
+    <script defer src="modal.js"></script>
     <footer>&copy;NOT a real business</footer>
+
+    <div id="registerModal" class="modal">
+      <div class="modal-content">
+        <span class="close">&times;</span>
+        <h2>Register Now and Enter Our Giveaway!</h2>
+        <p>
+          Register with our site today and get a chance to win amazing camping
+          gear. Don't miss out!
+        </p>
+        <button onclick="window.location.href='register.html'">
+          Register Now
+        </button>
+      </div>
+    </div>
   </body>
 </html>
