added wishlist functionality

--- a/src/cart/index.html
+++ b/src/cart/index.html
@@ -27,6 +27,8 @@
           <button class="checkout-button">Checkout</button>
         </a>
       </section>
+      <h2>My Wishlist</h2>
+      <section class="wishlist"></section>
     </main>
 
     <footer id="cart-footer"></footer>
