--- a/src/index.html
+++ b/src/index.html
@@ -111,13 +111,13 @@
       <h2>Sign Up for Our Newsletter to Get Access to Exclusive Deals and Discounts</h2>
       <form class="newsletter-form">
         <fieldset class="newsletter-form-contact-info">
-          <legend>Contact Information</legend>
-          <label>First Name <input type="text" name="fname" id="form-fname" placeholder="John" required></label>
-          <label>Last Name <input type="text" name="lname" id="form-lname" placeholder="Doe"></label>
-          <label>Email <input type="email" name="email" id="form-email" placeholder="johndoe@example.com"
+          <label>First Name <input type="text" name="fname" id="newsletter-form-fname" placeholder="John"
+              required></label>
+          <label>Last Name <input type="text" name="lname" id="newsletter-form-lname" placeholder="Doe"></label>
+          <label>Email <input type="email" name="email" id="newsletter-form-email" placeholder="johndoe@example.com"
               required></label>
         </fieldset>
-        <input type="submit" id="form-submit" value="Receive Newsletters">
+        <input type="submit" id="newsletter-form-submit" value="Receive Newsletters">
       </form>
     </section>
   </main>
