--- a/src/index.html
+++ b/src/index.html
@@ -109,7 +109,7 @@
     </section>
     <section class="newsletter-sign-up">
       <h2>Sign Up for Our Newsletter to Get Access to Exclusive Deals and Discounts</h2>
-      <form class="newsletter-form">
+      <form class="newsletter-form" id="newsletterForm">
         <fieldset class="newsletter-form-contact-info">
           <label>First Name <input type="text" name="fname" id="newsletter-form-fname" placeholder="John"
               required></label>
