Added comments system

--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -10,7 +10,7 @@
   <body>
     <header class="divider" id="product-header"></header>
     <main class="divider">
-      <section class="product-detail">
+      <section class="product-detail divider">
         <h3 id="productName"></h3>
         <h2 class="divider" id="productNameWithoutBrand"></h2>
         <img id="productImage" class="divider" src="" srcset="" alt="" />
@@ -22,6 +22,12 @@
         <div class="product-detail__add">
           <button id="addToCart" data-id="">Add to Cart</button>
         </div>
+      </section>
+      <section class="comment-section">
+        <h1 class="comments-header">Comments</h2>
+        
+        <div id="commentsContainer"></div>
+        <button id="addComment" data-id="">Add Comment</button>
       </section>
     </main>
     <footer id="product-footer"></footer>
