--- a/src/product-list/index.html
+++ b/src/product-list/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
-    <script src="../js/product-list.js" type="module"></script>
+    <script src="../js/discount.js" type="module"></script>
   </head>
   <body>
     <header class="divider" id="main-header"></header>
@@ -19,7 +19,7 @@
             <a href="#" id="sortByPrice">Sort By Price</a>
           </div>
         </div>
-        <ul class="product-list"></ul>
+        <div class="product-listing-container"></div>
       </section>
     </main>
     <footer id="main-footer"></footer>
