--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -6,7 +6,7 @@
     <title id="title"></title>
     <link rel="stylesheet" href="../css/style.css" />
     <script src="../js/product.js" type="module"></script>
-    <script src="../disocunts.js"></script>
+    <script src="../js/discounts.js"></script>
   </head>
   <body>
     <header class="divider" id="product-header"></header>
