--- a/src/product-list/index.html
+++ b/src/product-list/index.html
@@ -6,11 +6,14 @@
     <title>Sleep Outside | Home</title>
     <link rel="stylesheet" href="/css/style.css" />
     <script src="../js/product-list.js" type="module"></script>
+    <script src="../js/alertModule.mjs" type="module"></script>
   </head>
   <body>
     <header class="divider" id="main-header"></header>
 
     <main class="divider">
+      <div id="alert-container"></div>
+      <!-- Alert container -->
       <section class="products">
         <div class="productHeader">
           <h2>Top Products: <span class="title"></span></h2>
