--- a/src/product_pages/index.html
+++ b/src/product_pages/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" /
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title id="title"></title>
     <link rel="stylesheet" href="../css/style.css" />
@@ -12,7 +12,7 @@
   <body>
     <h1 id="productName">Product Name</h1>
     <p id="productNameWithoutBrand">Product Name Without Brand</p>
-    <img id="productImage" src="" alt="Product Image" />
+    <img id="productImage" src="../images/tents/the-north-face-talus-tent-4-person-3-season-in-golden-oak-saffron-yellow~p~985rf_01~320.jpg" alt="Product Image" />
     <p>Suggested Retail Price: <span id="productSuggestedPrice"></span></p>
     <p>Final Price: <span id="productFinalPrice"></span></p>
     <p>Description: <span id="productDescriptionHtmlSimple"></span></p>
