--- a/src/register.html
+++ b/src/register.html
@@ -19,13 +19,31 @@
         <form id="signupForm" action="/users" method="POST">
           <fieldset>
             <label for="name">Name</label>
-            <input type="text" id="name" name="name" placeholder="John Doe" required />
-            
+            <input
+              type="text"
+              id="name"
+              name="name"
+              placeholder="John Doe"
+              required
+            />
+
             <label for="address">Address</label>
-            <input type="text" id="address" name="address" placeholder="123 Main St" required />
+            <input
+              type="text"
+              id="address"
+              name="address"
+              placeholder="123 Main St"
+              required
+            />
 
             <label for="email">Email</label>
-            <input type="email" id="email" name="email" placeholder="john.doe@example.com" required />
+            <input
+              type="email"
+              id="email"
+              name="email"
+              placeholder="john.doe@example.com"
+              required
+            />
           </fieldset>
           <input type="submit" value="Register" />
         </form>
